--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,11 @@
 	<head>
 		<title>Particle System</title>
 		<meta charset="UTF-8" />
+		<script type="text/javascript" src="lib/underscore-min.js"></script>
+		<script type="text/javascript" src="src/Util.js"></script>
 		<script type="text/javascript" src="src/Vector2d.js"></script>
 		<script type="text/javascript" src="src/Particle.js"></script>
-		<script type="text/javascript" src="src/ParticleSystem.js"></script>
+		<script type="text/javascript" src="src/ParticleEmitter.js"></script>
 		<script type="text/javascript" src="src/Sandbox.js"></script>
 	</head>
 	<body>
