add physics effect

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="lib/underscore-min.js"></script>
 		<script type="text/javascript" src="src/Util.js"></script>
 		<script type="text/javascript" src="src/Vector2d.js"></script>
+		<script type="text/javascript" src="src/Rectangle.js"></script>
 		<script type="text/javascript" src="src/Particle.js"></script>
 		<script type="text/javascript" src="src/ParticleEmitter.js"></script>
 		<script type="text/javascript" src="src/Sandbox.js"></script>
